--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Usability Hub</title>
-    <link rel="shortcut icon" href="./assets/icons8-icon-64.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./icons8-icon-64.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <!-- <link rel="stylesheet" href="media-queries.css"> -->
 
@@ -21,7 +21,7 @@
     <nav>  
         <div class="container main-nav flex">
             <a href="#" class="company-logo">
-                <img src="./assets/asset 1.png" alt="Logo">
+                <img src="./asset 1.png" alt="Logo">
             </a>
             <div class="nav-link" id="nav-link">
                 <ul class="flex">
@@ -47,7 +47,7 @@
             <a href="#" class="primary-button start-button">Get Started</a>
            </div>
         <div class="header-right">
-            <img src="./assets/asset 2.jpeg" alt="IMAGE">
+            <img src="./asset 2.jpeg" alt="IMAGE">
         </div>
        </div> 
     </header>   
@@ -56,13 +56,13 @@
         <div class="container">
             <div class="small-bold-text companies-header">The World's best companies rely on UsabilityHub to make better  design decisions.</div>
             <div class="logos flex">
-                <img class="logo" src="./assets/asset 3.png" alt="Logo">
-                <img class="logo" src="./assets/asset 4.png" alt="Logo">
-                <img class="logo" src="./assets/asset 5.png" alt="Logo">
-                <img class="logo" src="./assets/asset 6.png" alt="Logo">
-                <img class="logo" src="./assets/asset 7.png" alt="Logo">
-                <img class="logo" src="./assets/asset 8.svg" alt="Logo">
-                <img class="logo" src="./assets/asset 9.png" alt="Logo">
+                <img class="logo" src="./asset 3.png" alt="Logo">
+                <img class="logo" src="./asset 4.png" alt="Logo">
+                <img class="logo" src="./asset 5.png" alt="Logo">
+                <img class="logo" src="./asset 6.png" alt="Logo">
+                <img class="logo" src="./asset 7.png" alt="Logo">
+                <img class="logo" src="./asset 8.svg" alt="Logo">
+                <img class="logo" src="./asset 9.png" alt="Logo">
 
             </div>
             </div>
@@ -77,38 +77,38 @@
             </div>
         <div class="features-area flex">
             <div class="features-card flex">
-                <img src="./assets/asset 11.svg" alt="card">
+                <img src="./asset 11.svg" alt="card">
                 <h3>Card Sorting</h3>
                 <p>Discover how people group and label information.</p>
                 <a href="#" class="secondary-button">Learn more  <i class="fa-solid fa-right-long fa-beat"></i></a>
             </div>
             <div class="features-card flex">
-                <img src="./assets/asset 13.svg" alt="card">
+                <img src="./asset 13.svg" alt="card">
                 <h3>Prototype tests</h3>
                 <p>Discover how people navigate your Figma prototypes.</p>
                 <a href="#" class="secondary-button">Learn more  <i class="fa-solid fa-right-long fa-beat"></i></a>
             </div>
             <div class="features-card flex">
-                <img src="./assets/asset 14.svg" alt="card">
+                <img src="./asset 14.svg" alt="card">
                 <h3>First click tests</h3>
                 <p>Test interaction with first click and navigation tests.</p>
                 <a href="#" class="secondary-button">Learn more <i class="fa-solid fa-right-long fa-beat"></i></a>
             </div> 
 
             <div class="features-card flex">
-                <img src="./assets/asset 15.svg" alt="card">
+                <img src="./asset 15.svg" alt="card">
                 <h3>Design surveys</h3>
                 <p>Get feedback on images, videos or audio files.</p>
                 <a href="#" class="secondary-button">Learn more <i class="fa-solid fa-right-long fa-beat"></i></a>
             </div>
             <div class="features-card flex">
-                <img src="./assets/asset 16.svg" alt="card">
+                <img src="./asset 16.svg" alt="card">
                 <h3>Preference tests</h3>
                 <p>Find out which designs users prefer and why.</p>
                 <a href="#" class="secondary-button">Learn more <i class="fa-solid fa-right-long fa-beat"></i></a>
             </div>
             <div class="features-card flex">
-                <img src="./assets/asset 17.svg" alt="card">
+                <img src="./asset 17.svg" alt="card">
                 <h3>Five second tests</h3>
                 <p>Test comprehensibility by measuring first impressions.</p>
                 <a href="#" class="secondary-button">Learn more <i class="fa-solid fa-right-long fa-beat"></i></a>
@@ -188,7 +188,7 @@
     <footer>
         <div class="container flex footer-container">
             <a href="#" class="company-logo">
-                <img src="./assets/asset 1.png" alt="company logo">
+                <img src="./asset 1.png" alt="company logo">
             </a>
             <div class="link-column flex">
                 <h4>Product</h4>
